Fixed alignment CSS

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -163,6 +163,12 @@
 }
 #product-service .distribution-text {
   padding: 0px 10px;
+  color:rgb(34, 34, 34);
+  font-family:"Graphik Webfont", -apple-system, system-ui, Roboto, "Droid Sans", "Segoe UI", Helvetica, Arial, sans-serif;
+  font-size:13px;
+  font-weight:300;
+
+  margin-bottom: 15px;
 }
 
 
@@ -175,10 +181,12 @@
   white-space: pre-wrap;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
 }
 
 #product-service .learn-more-button {
   border-radius: 24px;
+  display: block;
   cursor:pointer;
   font-family:"Graphik Webfont", -apple-system, system-ui, Roboto, "Droid Sans", "Segoe UI", Helvetica, Arial, sans-serif;
   font-size:13px;
@@ -186,13 +194,11 @@
   height:36px;
   border-style: none;
   outline-style:none;
-  padding-bottom:9px;
-  padding-left:15px;
-  padding-right:15px;
-  padding-top:9px;
   text-align:center;
   width: 197.594px;
   align-self: center;
+  position: relative;
+  bottom: 4em;
 }
 #product-service .learn-more-button:hover {
   background-color: rgba(34, 34, 34, 0.07);
@@ -207,14 +213,20 @@
   height:36px;
   border-style: none;
   outline-style:none;
-  padding-bottom:9px;
-  padding-left:15px;
-  padding-right:15px;
-  padding-top:9px;
+
   text-align:center;
   width: 57.7031px;
   align-self: center;
 }
 #product-service .less:hover {
   background-color: rgba(34, 34, 34, 0.07);
+}
+#product-service .fadeout {
+  position: relative;
+  bottom: 4em;
+  height: 4em;
+  background: -webkit-linear-gradient(
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 1) 100%
+  );
 }
